added my portfolio

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Hassan's Workshop</title>
         <style>
             body {
-                background: rgb(125, 198, 205);
-                color: rgb(45, 45, 45);
+                background: rgb(255, 166, 33);
+                color: rgb(254, 255, 251);
                 padding: 10px;
                 font-family: arial;
             }
@@ -16,15 +16,15 @@
         
             /* navigation menu */
             nav {
-                background: rgb(239, 80, 41);
-                margin: 0 auto;
+                background: rgb(94, 2, 37);
+                margin: bottom 20px;
                 display: flex;
                 padding: 10px;
             }
             h1 {
                 display: flex;
                 align-items: center;
-                color: white;
+                color: rgb(233, 224, 205);
                 flex: 1;
                 margin: 0;
             }
@@ -42,7 +42,7 @@
         
             /* main container area beneath menu */
             main {
-                background: rgb(245, 238, 219);
+                background: rgb(100, 0, 0);
                 display: flex;
             }
             .sidebar {
@@ -84,7 +84,7 @@
             <main>
                 <!-- Sidebar section -->
                 <div class = 'sidebar'>
-                    <img class = "sidebar-img" src = "images/profilepic.jpg">
+                    <img class = "sidebar-img" src = "images/Image-1.jpg">
                 </div>
 
                 <!-- Content section -->
