--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 400px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -61,7 +61,8 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var positionX = 0;
+			var points = 0;
 
 			
 			/* 
@@ -70,8 +71,9 @@
 			turn it around! 
 			*/
 			function update() {
-				
-
+			
+				moveBoxTo(positionX);
+				positionX = positionX + 10;
 			};
 
 			/* 
@@ -80,6 +82,8 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				positionX = 0;
+				changeBoxText(1);
 				
 
 
