--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -76,12 +76,12 @@
 				moveBoxTo(positionX);
 				positionX = positionX + speed;
 
-				if (positionX >= boardWidth) {
-					speed = speed * -1;
+				if (positionX > boardWidth) {
+					speed = -speed;
 				}
 
-				if (positionX <= 0) {
-					speed = speed * -1
+				else if (positionX < 0) {
+					speed = -speed;
 				}
 			};
 
@@ -95,7 +95,14 @@
 				points += 1;
 				speed += 3;
 				changeBoxText(points);
-			
+			if (speed > 0) {
+				speed = speed + 3;
+			}
+
+			else {
+				speed = speed - 3;
+			}
+
 
 				
 
